; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/ata/extr_pata_sc1200.c_sc1200_clock.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/ata/extr_pata_sc1200.c_sc1200_clock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SC1200_REV_B1 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @sc1200_clock to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sc1200_clock() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = call i32 @inb(i32 36924)
  store i32 %5, i32* %2, align 4
  %6 = call i32 @inb(i32 36925)
  store i32 %6, i32* %3, align 4
  %7 = load i32, i32* %2, align 4
  %8 = icmp eq i32 %7, 4
  br i1 %8, label %9, label %14

9:                                                ; preds = %0
  %10 = load i32, i32* %3, align 4
  %11 = load i32, i32* @SC1200_REV_B1, align 4
  %12 = icmp slt i32 %10, %11
  br i1 %12, label %13, label %14

13:                                               ; preds = %9
  store i32 0, i32* %1, align 4
  br label %25

14:                                               ; preds = %9, %0
  %15 = call i32 @inw(i32 36894)
  store i32 %15, i32* %4, align 4
  %16 = load i32, i32* %4, align 4
  %17 = ashr i32 %16, 8
  store i32 %17, i32* %4, align 4
  %18 = load i32, i32* %4, align 4
  %19 = and i32 %18, 3
  store i32 %19, i32* %4, align 4
  %20 = load i32, i32* %4, align 4
  %21 = icmp eq i32 %20, 3
  br i1 %21, label %22, label %23

22:                                               ; preds = %14
  store i32 0, i32* %4, align 4
  br label %23

23:                                               ; preds = %22, %14
  %24 = load i32, i32* %4, align 4
  store i32 %24, i32* %1, align 4
  br label %25

25:                                               ; preds = %23, %13
  %26 = load i32, i32* %1, align 4
  ret i32 %26
}

declare dso_local i32 @inb(i32) #1

declare dso_local i32 @inw(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
